<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.byethost17.pocketful.travels.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/new_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_new_entry"/>

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_search"/>

        <Button
            android:id="@+id/edituser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_edituser"/>

    </LinearLayout>

</RelativeLayout>
