<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.byethost17.pocketful.travels.ResetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_text1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_text2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </View>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </View>

        <Button
            android:id="@+id/reset_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_submit"/>

    </LinearLayout>

</RelativeLayout>